# multilingual_nlp

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  toIntstallLater.txt
data/processed/: labels.pt  tokenized_data.pt
data/raw/: additional_texts.txt  another_dataset.json  dataset.csv
models/checkpoints/checkpoint-500/: config.json  tokenizer_config.json  vocab.txt
models/final_model/: config.json  tokenizer_config.json  vocab.txt
notebooks/: data_exploration.ipynb  deployment_demo.ipynb  evaluation_results.ipynb  model_prototyping.ipynb
scripts/: data_preprocessing.py  deploy_model.py  evaluate_model.py  train_model.py
utils/: data_utils.py  model_utils.py
