[tool.poetry]
name = "experimenting"
version = "0.1.0"
description = ""
authors = ["Satyam Das"]

[tool.poetry.dependencies]
transformers = "==4.29.0"
datasets = "==2.5.0"
torch = "==2.3.1"
scikit-learn = "==1.0.1"
fasttext = "==0.9.2"
nlpaug = "==1.1.10"
flask = "==2.0.2"
pandas = "==1.3.4"
numpy = "==1.21.2"
pyyaml = "==5.4.1"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["W291", "W292", "W293"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
