[tool.poetry]
name = "experimenting"
version = "0.1.0"
description = ""
authors = ["Satyam Das"]

[tool.poetry.dependencies]
python = "^3.12"
transformers = "4.43.1"
datasets = "2.5.0"
numpy = "1.26.4"
pandas = "2.2.2"
scikit-learn = "1.5.1"
torch = "2.3.1"


[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["W291", "W292", "W293"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
