[tool.poetry]
name = "experimenting"
version = "0.1.0"
description = ""
authors = ["Satyam Das"]

[tool.poetry.dependencies]
python = "^3.12"
transformers = "4.43.1"
datasets = "^2.20.0"
numpy = "1.26.4"
pandas = "2.2.2"
scikit-learn = "1.5.1"
torch = "2.3.1"
spacy = "3.7.5"
nlpaug = "1.1.10"
flask = "2.0.2"
pyyaml = "6.0.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pylint = "^3.2.6"
flake8 = "^7.1.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.11.0"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["W291", "W292", "W293"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
